--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>hola como estan</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga adipisci cupiditate tenetur praesentium repellat pariatur doloribus et, inventore sed iure corporis veritatis, aliquam in laudantium odit placeat quaerat consectetur. Quas?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quos minus nihil mollitia vel, exercitationem corporis beatae, modi, natus deleniti fugiat labore perspiciatis. Soluta sit veritatis natus, dignissimos iure porro.</p>
   </body>
 </html>
